Added increment functionality; started on reset functionality

--- a/src/main/javascript/index.html
+++ b/src/main/javascript/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <title>Achtung! Blinkenlights</title> 
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <title>Achtung! Blinkenlights</title>
     <link href="css/style.css" type="text/css" rel="stylesheet" />
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
     <style>
@@ -12,7 +13,7 @@
   <center>
   <h1>Achtung! Blinkenlights</h1>
   <h2>What does it do?</h2>
-  <div>Displays a (square) grid of clickable cells, with default width/height of <strike>50</strike> 10 cells. Clicking a cell increments the value of that cell, as well as the value of all the cells in the same row and column. After each increment, a cell briefly lights up in yellow. If two neighbouring cells (up, down, left, right) contain a value of four and two, both these cells light up briefly in green, and then reset their values to zero.</div>
+    <div>Displays a (square) grid of clickable cells, with default width/height of 50 cells. Clicking a cell increments the value of that cell, as well as the value of all the cells in the same row and column. After each increment, a cell briefly lights up in yellow. <strike>If two neighbouring cells (up, down, left, right) contain a value of four and two, both these cells light up briefly in green, and then reset their values to zero.</strike></div>
    <table id='grid'>
   <tbody></tbody>
   </table>
